--- a/internal/pkg/config/testdata/config/missing_trust_zone_field.yaml
+++ b/internal/pkg/config/testdata/config/missing_trust_zone_field.yaml
@@ -2,6 +2,6 @@ trust_zones:
     - trust_domain: td1
       bundle_endpoint_url: 127.0.0.1
       federations:
-        - from: tz1
-          to: tz2
+        - trust_zone_id: tz1-id
+          remote_trust_zone_id: tz2-id
       attestation_policies: []
