--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,13 +44,13 @@ jobs:
       - name: Build
         run: |
           mkdir -p dist
-          GOOS=${{ matrix.goos }} GOARCH=${{ matrix.goarch }} go build -o dist/cofidectl-${{ matrix.goos }}-${{ matrix.goarch }}-${{ github.ref_name }} ./cmd/cofidectl/main.go
+          GOOS=${{ matrix.goos }} GOARCH=${{ matrix.goarch }} go build -ldflags '-X main.version=${{ github.ref_name }}' -o dist/cofidectl-${{ matrix.goos }}-${{ matrix.goarch }}-${{ github.ref_name }} ./cmd/cofidectl/main.go
       - name: Upload artifacts
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           BINARY="cofidectl-${{ matrix.goos }}-${{ matrix.goarch }}-${{ github.ref_name }}"
           mv dist/$BINARY . # move to this directory to remove dist/ from shasum check
-          shasum -a 256 $BINARY > $BINARY.sha256 
+          shasum -a 256 $BINARY > $BINARY.sha256
           gh release upload ${{ github.ref_name }} $BINARY.sha256
           gh release upload ${{ github.ref_name }} $BINARY
