--- a/demos/Justfile
+++ b/demos/Justfile
@@ -8,7 +8,7 @@ prompt_namespace := 'yes'
 
 # Check for demo script dependencies
 check-deps:
-    for cmd in ko kubectl; do \
+    for cmd in kubectl; do \
         if ! command -v $cmd &> /dev/null; then \
             echo "Error: $cmd is not installed" >&2; \
             exit 1; \
