--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -1,15 +1,16 @@
+version: "2"
+
 linters:
   enable:
     - goheader
-
-linters-settings:
-  goheader:
-    values:
-      const:
-        COMPANY: Cofide Limited
-      regexp:
-        VALID_YEAR: 202[4-9]|20[3-9][0-9]|2[1-9][0-9][0-9]
-    # Require Cofide copyright and SPDX license in all source files.
-    template: |-
-      Copyright {{ VALID_YEAR }} {{ COMPANY }}.
-      SPDX-License-Identifier: Apache-2.0
+  settings:
+    goheader:
+      values:
+        const:
+          COMPANY: Cofide Limited
+        regexp:
+          VALID_YEAR: 202[4-9]|20[3-9][0-9]|2[1-9][0-9][0-9]
+      # Require Cofide copyright and SPDX license in all source files.
+      template: |-
+        Copyright {{ VALID_YEAR }} {{ COMPANY }}.
+        SPDX-License-Identifier: Apache-2.0
