test: add external-agent integration test and run in CI
This test runs a SPIRE agent in a Docker container outside of the
Kubernetes cluster. The agent uses join token node attestation.
Ping pong client and server workloads also run in Docker containers
outside of the Kubernetes cluster. They are each given an identity using
a static attestation policy.

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -9,6 +9,11 @@ jobs:
   single-trust-zone:
     name: single trust zone
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        test:
+          - single-trust-zone
+          - external-agent
     steps:
       - name: Checkout
         uses: actions/checkout@v6
@@ -36,7 +41,7 @@ jobs:
         run: just create-kind-cluster
 
       - name: Test
-        run: just integration-test single-trust-zone
+        run: just integration-test ${{ matrix.test }}
 
   federation:
     name: federation
