feat(attestationpolicy): Add TPMNode attestation policy support
This commit introduces support for TPMNode attestation policies,
allowing users to define policies based on TPM Endorsement Key (EK)
hashes and selector values. The policies are also displayed when listing
attestation policies.

Example list output:

  TPMNode attestation policies

      NAME    |  EK HASH  | SELECTOR VALUES
  ------------+-----------+------------------
    test-tpm  | some-hash | some-value
    test-tpm2 | abc       | v1,v2
    test-tpm3 | abc       | v1,v2,v3

This change also refactors the multi-table rendering to use a common
TableRenderer type. This has only been applied to the attestation-policy
list command, but could be used elsewhere in future. It also adds a
Renderer interface, allowing us to support other output formats in
future.

--- a/internal/pkg/config/testdata/config/full.yaml
+++ b/internal/pkg/config/testdata/config/full.yaml
@@ -123,6 +123,14 @@ attestation_policies:
               value: agent_ns:spire-system
             - type: k8s_psat
               value: agent_sa:spire-agent
+    - id: ap7-id
+      name: ap7
+      tpm_node:
+        attestation:
+            ek_hash: fake-ek-hash
+        selector_values:
+            - selector1
+            - selector2
 plugin_config:
     plugin1:
         list-cfg:
