--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -19,7 +19,10 @@ jobs:
         uses: actions/checkout@v6
 
       - name: Install just
-        uses: taiki-e/install-action@just
+        # v2.66.5
+        uses: taiki-e/install-action@2e9d707ef49c9b094d45955b60c7e5c0dfedeb14
+        with:
+          tool: just@1.46.0
 
       - name: Setup Go
         uses: actions/setup-go@v6
@@ -66,7 +69,7 @@ jobs:
 
       - name: Build and run tests
         run: just build
-      
+
       - name: Build and install test plugin
         run: just install-test-plugin
         if: ${{ matrix.plugin == 'cofidectl-test-plugin' }}
